--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.folder{
+  height: 200px;
+  width: 200px;
+  background-color: blue;
+  margin-top: 10px;
+}
